fix alignment of collection tiles

--- a/webcode/styles.css
+++ b/webcode/styles.css
@@ -890,7 +890,7 @@
   gap: 16px;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 0 40px;
   margin-bottom: 40px;
 }
@@ -899,7 +899,7 @@
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .search-header-wrapper {
